---------------------------------------------------------------------------------------------------
Version: 0.1.5
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.1.4
Date: 2025-11-26
  Changes:
    - Moved prototypes logic from data-final-fixes.lua to just data.lua
    - Basic biochamber produce spores while working
---------------------------------------------------------------------------------------------------
Version: 0.1.3
Date: 2025-11-16
  Changes:
    - Balance basic biochamber
    - Update info on everything
---------------------------------------------------------------------------------------------------
Version: 0.1.2
Date: 2025-11-16
  Info:
    - Small balance changes
  Debug:
    - Implement integration between mod's code and VScode extension
---------------------------------------------------------------------------------------------------
Version: 0.1.1
Date: 15.11.2025
  Info:
    - Mod init