@@ -3,9 +3,13 @@ basic-biochamber=Basic biochamber
 
 [item-name]
 basic-biochamber=Basic biochamber
+stable-pentapod-egg=Stable pentapod egg
 
 [item-description]
 basic-biochamber=Early version of biochamber which uses electricity instead of nutrients.
+stable-pentapod-egg=Pentapod egg which do not spoils
 
 [recipe-name]
 basic-biochamber=Basic biochamber
+stable-pentapod-egg=Stable pentapod egg
+unstable-pentapod-egg=Unstable pentapod egg
