@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.5
-Date: ????
+Date: 2025-12-12
   Changes:
+    - Add stable and unstable pentapod egg
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.4
 Date: 2025-11-26
